--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 # External dependencies
 vendor
 
-#Lock is not required in Symfony Bundles
+# Lock is not required in Symfony Bundles
 composer.lock
 
-#PHP CSFixer cache files
+# PHP CSFixer cache files
 .php_cs.cache
 
 # IDE files
 .idea
+
+# PHPUnit cache
+.phpunit.result.cache
