--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
   "require": {
     "php": ">=7.2",
     "symfony/framework-bundle": "^4.4|^5.1",
+    "symfony/http-foundation": "^5.3",
     "symfony/serializer": "^5.3",
     "symfony/serializer-pack": "^1.0",
     "symfony/validator": "^5.3"
